--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -8,12 +8,12 @@ header .navbar .tabs{list-style:none}
 header .navbar .tabs .tab{display:inline-block;overflow:hidden}
 header .navbar .tabs .tab a{font-size:14px;line-height:54px;opacity:.6;padding:20px 14px;text-transform:capitalize}
 header .navbar .tabs .tab a:hover{background-color:#efefef;opacity:1}
-header .navbar .tabs .tab ul.dropdown{background-color:#fff;border-radius:0 0 2px 2px;box-shadow:0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.2),0 1px 5px 0 rgba(0,0,0,0.12);display:none;list-style:none;padding:8px 0;position:absolute;top:54px;right:102px}
+header .navbar .tabs .tab ul.dropdown{background-color:#fff;border-radius:0 0 2px 2px;box-shadow:0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.2),0 1px 5px 0 rgba(0,0,0,0.12);display:none;list-style:none;padding:8px 0;position:absolute;top:54px;right:1px}
 header .navbar .tabs .tab ul.dropdown li{opacity:.6}
 header .navbar .tabs .tab ul.dropdown li a{cursor:pointer;line-height:32px;opacity:1;padding:8px 24px}
 header .navbar .tabs .tab:hover{opacity:1}
-header .navbar .tabs .tab:hover ul.dropdown{display:block}
-header .navbar .tabs .tab:hover ul.dropdown li:hover{background-color:#efefef}
+header .navbar .tabs .tab:hover ul.dropdown{display:block;z-index: 100;}
+header .navbar .tabs .tab:hover ul.dropdown li:hover{background-color:#efefef; opacity:1}
 header .navbar .tabs .tab:hover ul.dropdown a:hover{opacity:1}
 header .navbar .tabs .tab.selected{opacity:1}
 header .navbar .tabs .tab.selected a{opacity:1}
@@ -34,3 +34,18 @@ header .navbar .logo{display:inline-block}
     header .navbar .hamburger{margin:13px 13px 0 0}
 }
   
+header .navbar .tabs .tab ul.dropdown li .username{text-transform:capitalize;
+    border-bottom: 1px solid rgb(214, 214, 214);
+    margin:15px;
+    }
+    
+    header .navbar .tabs .tab ul.dropdown li a span{text-transform:capitalize;
+        padding-left:10px;
+        text-align: left;
+        }
+    header .navbar .tabs .tab ul.dropdown li a .signout{
+        font-size: 18px;
+    }
+    header .navbar .tabs .tab ul.dropdown li a .profile{
+        font-size: 19px;
+    }
