--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,11 +11,11 @@
 .container-size{
   min-height: 540px!important;
     min-width: 100% !important;
-    background: linear-gradient(rgba(0,0,0,0.25), rgba(0,0,0,0.45)),url(/src/static/images/satellite-earth-imaging.png);
-    background-position: center;
+    /* background: linear-gradient(rgba(0,0,0,0.25), rgba(0,0,0,0.45)),url(/src/static/images/satellite-earth-imaging.png); */
+    /* background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    -o-background-size: cover;
+    -o-background-size: cover; */
 }
