--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -1,47 +1,70 @@
 .login{
     min-height: 540px;
-    min-width: 100% !important;
+    min-width:350px !important;
+    
 }
 
 .login .card {
-    min-height: 60vh;
-    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 20%);
-    transition: 0.3s;
-    width: 100%;
-    border-radius: 5px;
-    opacity: 1;
+    min-width: 100% !important;
+    position: relative;
+    margin: 0 auto;
+    background: #e9ecefcc;
+    padding: 30px;
+    border: 1px solid;
+    border-top-color: rgba(255,255,255,.4);
+    border-left-color: rgba(255,255,255,.4);
+    border-bottom-color: rgba(60,60,60,.4);
+    border-right-color: rgba(60,60,60,.4);
 }
 
 .login .login-title{
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+    font-size: 32px;
+	font-weight: 600;
+	padding-bottom: 10px;
+	text-align: center;
+    
 }
 
 .login .card .login-form{
-    min-width: 200px !important;
-
+    min-width: 250px !important;
+    
 }
 
-.form-checkbox{
+.remember-me-checkbox{
     text-align: left;
 }
 
-.form-checkbox label{
+.remember-me-checkbox label{
     margin: 1vh;
 }
 
-.form-checkbox, .form-checkbox span, .forgot-password{
+.remember-me-checkbox, .remember-me-checkbox span, .forgot-password{
+    font-size: 12px !important;
+    text-align:left !important;
+
+    margin-top: 2vh;
+
+}
+.forgot-password a{
+color: #117a8b;
+/* font-weight: bold; */
+cursor: pointer;
+}
+
+.remember-me-checkbox span{
     font-size: 11px !important;
 }
 
-.form-checkbox span{
-    font-size: 11px !important;
+
+.register-message {
+    margin-top: 2vh;
+    text-align:left !important;   
+    font-size: 12px !important;
 }
 
-
-.registerMessage {
-    margin-top: 1vh;
-    
-
+.register-message span{   
+    font-size: 12px !important;
 }
 
 
