--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -1,3 +1,7 @@
+.projects{
+  width:100%;
+}
+
 .project-card {
     min-height: 40vh;
 }
@@ -6,43 +10,77 @@
     min-height: 5vh;
 }
 
-.projects .card {
+.create-projects .card {
     box-shadow: 0 2px 2px 0 rgb(0 0 0 / 20%);
     transition: 0.3s;
     width: 100%;
     border-radius: 5px;
     padding: 5px 5px;
-    opacity: .7;
+    opacity: .8;
     cursor: pointer;
 
   }
   
-.projects .card:hover {
+.create-projects .card:hover {
     /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2); */
     opacity: 1;
   }
  
-.projects .card .inner-card{
+.create-projects .card .inner-card{
     background: rgb(0 0 0 / 8%);
     padding: 50px;
 }
 
-.projects .card .inner-card{
+.create-projects .card .inner-card{
     background: rgb(0 0 0 / 8%);
     padding: 50px;
 }
 
-.projects .card .inner-card img{
+.create-projects .card .inner-card img{
     width:70px;
     
 }
 
-.projects .container{
+.create-projects .container{
     padding: 12px 1px;
   }
 
-.projects .container span{
+.create-projects .container span{
     font-size: 15px;
     /* color: #117a8b;*/
     font-weight: bold; 
+  }
+
+  /* Float four columns side by side */
+  .projects .row .column {
+    float: left;
+    width: 25%;
+    padding: 0 10px;
+  }
+  
+  /* Remove extra left and right margins, due to padding */
+  .projects .row {margin: 0 -5px;}
+  
+  /* Clear floats after the columns */
+  .projects .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive columns */
+  @media screen and (max-width: 600px) {
+    .projects .row .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+  
+  /* Style the counter cards */
+  .projects .row .column .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    text-align: center;
+    background-color: #f1f1f1;
   }
