--- a/client/src/components/CreateProject/CreateProject.css
+++ b/client/src/components/CreateProject/CreateProject.css
@@ -1,4 +1,4 @@
-/* Popup style */
+/* Popup style
 .popup-box {
     position: fixed;
     background: #00000050;
@@ -36,4 +36,103 @@
     text-align: center;
     border: 1px solid #999;
     font-size: 20px;
+  } */
+
+  
+.modal-cover {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    transform: translateZ(0);
+    background-color: rgba(0, 0, 0, 0.8);
   }
+  
+  .modal-area {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 2.5em 1.5em 1.5em 1.5em;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  
+  @media screen and (min-width: 500px) {
+    /* Center the Modal! */
+    .modal-area {
+      left: 50%;
+      top: 50%;
+      height: auto;
+      transform: translate(-50%, -50%);
+      max-width: 30em;
+      max-height: calc(100% - 1em);
+    }
+  }
+  
+  button._modal-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1px;
+    line-height: 1;
+    background: #fff;
+    border: 0;
+    box-shadow: 0;
+    cursor: pointer;
+    /* opacity: .5; */
+    
+  }
+ 
+
+  button._modal-close:focus{
+      outline:0px;
+  }
+  
+  ._modal-close-icon {
+    cursor: pointer;
+    /* position: fixed; */
+    right: calc(15% - 30px);
+    top: calc(100vh - 85vh - 33px);
+    /* background: #ca3b27; */
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    line-height: 20px;
+    text-align: center;
+    /* border: 1px solid #ca3b27; */
+    font-size: 20px;
+    stroke: #212529;
+    stroke-width: 6;
+
+  }
+
+  button._modal-close:hover{
+    opacity: 1;
+}
+  
+  .modal-body {
+    padding-top: 0.25em;
+  }
+  ._hide-visual {
+    border: 0 !important;
+    clip: rect(0 0 0 0) !important;
+    height: 1px !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    padding: 0 !important;
+    position: absolute !important;
+    width: 1px !important;
+    white-space: nowrap !important;
+  }
+  
+  .scroll-lock {
+    overflow: hidden;
+    margin-right: 17px;
+  }
+  
