--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@
     background-color:#fff;
     box-shadow:0 3px 2px rgba(245, 243, 243, 0.05);
     height:31px;
-    padding:3px;
+    padding-top: 7px;
     
 }
 .footer span{
