--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -10,59 +10,169 @@
     min-height: 5vh;
 }
 
+.create-projects{
+  /* width:30em;
+  height:30em; */
+
+}
 .create-projects .card {
     box-shadow: 0 2px 2px 0 rgb(0 0 0 / 20%);
     transition: 0.3s;
     width: 100%;
     border-radius: 5px;
     padding: 5px 5px;
-    opacity: .8;
+    opacity: 0.7;
     cursor: pointer;
-
+    width: 18em;
+    height: 13em;
+    text-align: center;
+    background-color: #f1f1f1;
   }
-  
-.create-projects .card:hover {
+  .projects .card {
+    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 20%);
+    transition: 0.3s;
+    width: 100%;
+    border-radius: 5px;
+    padding: 5px 5px;
+    /* padding-bottom: 30px; */
+    opacity: 1;
+    /* cursor: pointer; */
+    width: 18em;
+    height: 13em;
+    text-align: center;
+    background-color: #f1f1f1;
+  }
+
+  .projects .card i{
+    color: grey;
+    float: right;
+    padding-top: 5px;
+    padding-right: 15px;
+    font-size: 15px;
+  }
+.create-projects .card:hover,.projects .card:hover {
     /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2); */
     opacity: 1;
   }
  
 .create-projects .card .inner-card{
-    background: rgb(0 0 0 / 8%);
-    padding: 50px;
+    /* background: #f8f9fa; */
+    background-color: #fff;
+
+    padding: 10px;
+    /* width: 15em;
+    height: 15em; */
+    width: -webkit-fill-available;
+    height: -webkit-fill-available;
 }
 
-.create-projects .card .inner-card{
-    background: rgb(0 0 0 / 8%);
-    padding: 50px;
+.projects .card .inner-card{
+  /* background: #f8f9fa;
+   */
+   background-color: #fff;
+  
+   padding: 10px;
+  /* width: 15em;
+  height: 15em; */
+  width: -webkit-fill-available;
+  height: -webkit-fill-available;
 }
+
 
 .create-projects .card .inner-card img{
-    width:70px;
+    /* width:70px; */
+    padding-top: 10px;
     
 }
 
-.create-projects .container{
-    padding: 12px 1px;
+.projects .card .inner-card img{
+  width:80px;
+  float:left;
+  margin-left: 10px;
+  
+}
+.projects .card .inner-card .project-details {
+    padding-bottom: 10px;
+  
+}
+.project-created-by{
+    padding-top: 20px;
+    text-align: left !important;
+    padding-left: 110px;
+}
+
+.project-time{
+  text-align: left !important;
+  padding-left: 110px;
+}
+.project-created-by span{
+  font-size: 11px !important;
+}
+
+.project-time span{
+  font-size: 11px !important;
+}
+
+.project-title
+{
+  /* position: fixed; */
+  padding-top: 18px;
+  text-align: left;
+  padding-left: 10px;
+
+}
+
+.project-title a:hover
+{
+  text-decoration: underline;
+}
+
+.project-title span{
+  font-size: 12px !important;
+  font-weight: 500;
+
+}
+.project-description
+{
+  /* position: fixed; */
+  /* padding-top: 40px; */
+  padding-left: 10px;
+
+  text-align: left;
+
+}
+
+.project-description span{
+  font-size: 11px !important;
+}
+
+.project-description a{
+  font-size: 10px;
+}
+.create-projects .container,.projects .container{
+    /* padding: 12px 1px; */
   }
 
 .create-projects .container span{
-    font-size: 15px;
+    font-size: 12px;
     /* color: #117a8b;*/
-    font-weight: bold; 
+    font-weight: 500; 
   }
 
   /* Float four columns side by side */
-  .projects .row .column {
+  .row .column {
     float: left;
-    width: 25%;
+    width: 20%;
     padding: 0 10px;
   }
   
   /* Remove extra left and right margins, due to padding */
-  .projects .row {margin: 0 -5px;}
+  .row {margin: 0 -5px;
+    width: 100%;
+  }
   
   /* Clear floats after the columns */
-  .projects .row:after {
+ .row:after {
     content: "";
     display: table;
     clear: both;
@@ -70,17 +180,14 @@
   
   /* Responsive columns */
   @media screen and (max-width: 600px) {
-    .projects .row .column {
+   .row .column {
       width: 100%;
       display: block;
       margin-bottom: 20px;
     }
   }
   
-  /* Style the counter cards */
-  .projects .row .column .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
-    text-align: center;
-    background-color: #f1f1f1;
-  }
+  /* Style the counter cards
+ .row .column .card {
+    
+  } */
