--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,10 @@
 html,body{font-family:"Google Sans","Roboto",sans-serif;margin:0;overflow-x:hidden;padding:0;-webkit-font-smoothing:antialiased;font-size: 14px;
 }
+body{
+    background-color: #ced4da!important;
+line-height: 1.15;
+
+}
 h1,h2,h3{font-family:"Google Sans Display","Roboto",sans-serif;color:#444;font-weight:400}
 h2{font-size:28px;color:#444;font-weight:400}
 h4{font-size:24px;color:#444;font-weight:400}
