--- a/client/src/components/CreateProject/CreateProject.css
+++ b/client/src/components/CreateProject/CreateProject.css
@@ -56,11 +56,23 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 2.5em 1.5em 1.5em 1.5em;
-    background-color: #ffffff;
+    /* padding: 1.5em 1.5em 1.5em 1.5em; */
+    /* background-color: #ffffff; */
     box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+
+    /* min-width: 100% !important;
+    position: relative; */
+    margin: 0 auto;
+    background: #e9ecef;
+    padding: 30px;
+    border: 1px solid;
+    /* border-top-color: rgba(255,255,255,.4);
+    border-left-color: rgba(255,255,255,.4); */
+    border-color:rgba(255,255,255,.4);
+    /* border-right-color: rgba(60,60,60,.4); */
+    border-radius:5px;
   }
   
   @media screen and (min-width: 500px) {
@@ -70,7 +82,7 @@
       top: 50%;
       height: auto;
       transform: translate(-50%, -50%);
-      max-width: 30em;
+      max-width: 35em;
       max-height: calc(100% - 1em);
     }
   }
@@ -81,7 +93,7 @@
     right: 0;
     padding: 1px;
     line-height: 1;
-    background: #fff;
+    background: #e9ecef;
     border: 0;
     box-shadow: 0;
     cursor: pointer;
@@ -117,7 +129,7 @@
 }
   
   .modal-body {
-    padding-top: 0.25em;
+    /* padding-top: 0.25em; */
   }
   ._hide-visual {
     border: 0 !important;
@@ -131,8 +143,24 @@
     white-space: nowrap !important;
   }
   
-  .scroll-lock {
+  /* .scroll-lock {
     overflow: hidden;
     margin-right: 17px;
   }
-  
+   */
+   .create-project-title{
+     padding: 0px 0px 10px 0px;
+	    text-align: center;
+
+   }
+   .create-project-title h4{
+    font-size: 20px !important;
+	/* font-weight: 600; */
+	/* padding-bottom: 10px; */
+	text-align: center;
+
+   }
+
+   .create-project-button{
+     margin-bottom: 0px !important;
+   }
