--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -55,29 +55,38 @@
     opacity: 1;
   }
  
+  .create-projects .card a{
+    width:100%;
+    height:100%;
+  }
 .create-projects .card .inner-card{
     /* background: #f8f9fa; */
     background-color: #fff;
 
-    padding: 10px;
+    padding: 20px;
     /* width: 15em;
     height: 15em; */
-    width: -webkit-fill-available;
-    height: -webkit-fill-available;
+    width: 100%;
+    height: 100%;
 }
 
+.projects .card a{
+  width:100%;
+  height:100%;
+}
 .projects .card .inner-card{
   /* background: #f8f9fa;
    */
    background-color: #fff;
   
-   padding: 15px;
+   padding: 10px;
    padding-bottom: 5px;
   /* width: 15em;
   height: 15em; */
-  width: -webkit-fill-available;
-  height: -webkit-fill-available;
+  width: 100%;
+  height: 100%;
 }
+
 
 
 .create-projects .card .inner-card img{
@@ -129,7 +138,7 @@
 }
 
 .project-title span{
-  font-size: 12px !important;
+  font-size: 13px !important;
   font-weight: 500;
 
 }
@@ -164,7 +173,7 @@
  
   .projects-row .column {
     float: left;
-    width: 19em;
+    width: 19em !important;
     padding: 0 10px;
   }
   
