--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,5 +35,31 @@ a:hover{opacity:1; text-decoration: none;color:#424242}
 
 header{background-color:#fff;box-shadow:0 3px 2px rgba(0,0,0,0.05);height:54px}
 header.fixed{left:0;position:fixed;top:0;width:100%;z-index:10}
+.autoML{
+    width: 100% !important;
+}
+input{
+    line-height: 1.5 !important;
+  }
+.row{
+    margin: 0px!important;
+}
+
+.form-control{
+    border: 1px solid #8B90AA;
+}
+
+.error-control{
+    height:1.5em;
+    text-align: left;
+  }
+
+  .form-group{
+    margin-bottom: 1.5em;
+
+  }
+  .validation{
+    margin-bottom: 0em !important;
+  }
 
 
